# EmailAgent

./: pyproject.toml
config/: my_info.txt  product_info.txt
data/crawl/: crawl_test.py
src/: generate_email.py  iterative_analysis.py  logger.py  main.py  send_email.py
